# fhe_precompiles

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: c_fhe.rs  fhe.rs  lib.rs  pack.rs  testnet.rs
src/data/: network.ct  network.pri  network.pub
