[package]
name = "fhe_precompiles"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["staticlib", "rlib"]

[dependencies]
bincode = "1.3.3"
crypto-bigint = "0.5.2"
libc = "0.2.139"
once_cell = "1.17.1"
paste = "1.0.12"
sha2 = "0.10.7"
sunscreen = { git = "https://github.com/Sunscreen-tech/Sunscreen", rev = "e90c11910cf6651a6d56bceb61d3f935cc7a1674", features = ["deterministic"]  }

[dev-dependencies]
serde = "1.0.160"
