[package]
name = "fhe_precompiles"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["staticlib", "rlib"]

[dependencies]
bincode = "1.3.3"
crypto-bigint = "0.5.2"
libc = "0.2.139"
once_cell = "1.17.1"
paste = "1.0.12"
sha2 = "0.10.7"
serde_json = "1.0.95"
sunscreen = { version = "0.8.0", features = [
  "deterministic",
  "transparent-ciphertexts",
] }

[dev-dependencies]
serde = "1.0.160"
